# UART-STM32-Driver

./: .clang-format  .gitignore  CMakeLists.txt  NOTES.md
cmake/: arm-none-eabi.cmake
include/: rcc.hpp  ring_buffer.hpp  uart.hpp
linker/: stm32f401xe.ld
src/: main.cpp  rcc.cpp  startup.cpp  syscalls.cpp  uart.cpp
tests/: CMakeLists.txt  ring_buffer_tests.cpp  uart_logic_tests.cpp
tests/mock/: stm32f4xx.h
